--- a/css/style.css
+++ b/css/style.css
@@ -453,10 +453,13 @@ section h1{font-size: 2em; text-align:center; font-weight: 900; color:white; pad
 #con6{width: 100%; padding: 80px 0px 80px;}
 #footer{width: 1180px; height: 200px; margin:0 auto;}
 
+/*
+gallery css 수정필요 index 부 css까지 중복적용 에러확인 필요
 #content{width: 1180px; margin:0px auto;}
 #content::after {content:''; display:block; clear:both;}
 #content>article{float: left; margin-bottom: 50px;}
 #content>article>h2{font:bold 16pt/3 'arial'; }
+*/
 
 @media screen and (max-width:1199.98px){
     #header{width: 100%; height: 120px}
